# wakeword

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
config/: prod_settings.yaml  settings.yaml
debian/: service
examples/: save_to_file.rs
keywords/: .gitignore  Dismiss_en_raspberry-pi_v3_0_0.ppn  Hey-Hopper_en_linux_v3_0_0.ppn  Hey-Hopper_en_raspberry-pi_v3_0_0.ppn  Hey-Kit_en_raspberry-pi_v3_0_0.ppn  Hey-Willow_en_raspberry-pi_v3_0_0.ppn  Hopper-Stop_en_raspberry-pi_v3_0_0.ppn  LICENSE.txt  Songbird_en_raspberry-pi_v3_0_0.ppn  Wintermute_en_linux_v3_0_0.ppn  Wintermute_en_raspberry-pi_v3_0_0.ppn  dismiss_en_linux_v3_0_0.ppn
scripts/: add_udev_rules
src/: configuration.rs  listener.rs  logging.rs  main.rs  messages.rs  respeaker.rs  wakeword_validation.rs
