[package]
authors = ["David Weis <dweis7@gmail.com>"]
name = "wakeword"
version = "0.1.0"
edition = "2021"
description = "Wakeword detector for the Picovoice Porcupine engine"
license = "MIT OR APACHE"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/wakeword"


[package.metadata.deb]
assets = [
  [
    "target/release/wakeword",
    "/usr/bin/",
    "755",
  ],
  [
    "config/settings.yaml",
    "/etc/wakeword/settings.yaml",
    "644",
  ],
]
conf-files = ["/etc/wakeword/settings.yaml"]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]


[dependencies]
# Picovoice
pv_porcupine = "=3.0.0"
pv_recorder = "1.2"
pv_cobra = "2.0"

# Audio
hound = "3.4.0"

# openai
async-openai = {version = "0.15"}

# Utils
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.11"
tempdir = "0.3.7"
clap = {version = "4", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"]}

# Serialisation
config = "0.13.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.25"
base64 = "0.21.0"

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# async
futures = "0.3"
async-trait = "0.1"
tokio = {version = "1.6", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "signal",
], default-features = false}

