[package]
authors = ["David Weis <dweis7@gmail.com>"]
name = "wakeword"
version = "0.4.0"
edition = "2021"
description = "Wakeword detector for the Picovoice Porcupine engine"
license = "MIT OR APACHE"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/wakeword"


[package.metadata.deb]
assets = [
  [
    "target/release/wakeword",
    "/usr/bin/",
    "755",
  ],
  [
    "config/prod_settings.yaml",
    "/etc/wakeword/settings.yaml",
    "644",
  ],
  [
    "include/libpv_cobra.so",
    # I think these should be under /usr/lib/ but not sure
    # "/usr/lib/",
    "/var/lib/wakeword/libpv_cobra.so",
    "755",
  ],
  [
    "include/libpv_porcupine.so",
    "/var/lib/wakeword/libpv_porcupine.so",
    "755",
  ],
  [
    "include/libpv_recorder.so",
    "/var/lib/wakeword/libpv_recorder.so",
    "755",
  ],
  [
    "include/porcupine_params.pv",
    "/var/lib/wakeword/",
    "644",
  ],
  [
    "include/default_keyword_files/*",
    "/var/lib/wakeword/default_keyword_files/",
    "644",
  ],
  [
    "keywords/Hey-Hopper_en_raspberry-pi_v3_0_0.ppn",
    "/var/lib/wakeword/keyword_files/",
    "644",
  ],
  [
    "keywords/Hopper-Stop_en_raspberry-pi_v3_0_0.ppn",
    "/var/lib/wakeword/keyword_files/",
    "644",
  ],
  [
    "keywords/Dismiss_en_raspberry-pi_v3_0_0.ppn",
    "/var/lib/wakeword/keyword_files/",
    "644",
  ],
  [
    "keywords/Wintermute_en_raspberry-pi_v3_0_0.ppn",
    "/var/lib/wakeword/keyword_files/",
    "644",
  ],
]
conf-files = ["/etc/wakeword/settings.yaml"]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]


[dependencies]
# Picovoice
pv_porcupine = "3.0"
pv_recorder = "1.2"
pv_cobra = "2.0"

# Audio
hound = "3.4"

# openai
async-openai = {version = "0.18"}

# Utils
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.12"
tempdir = "^0.3.7"
clap = {version = "4", features = ["derive"]}
chrono = {version = "^0.4.34", features = ["serde"]}

# Serialisation
config = "0.14"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "^0.9.25"
base64 = "0.21.0"

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# async
futures = "0.3"
async-trait = "0.1"
tokio = {version = "1.6", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "signal",
], default-features = false}

